--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   },
   "dependencies": {
     "debug": "^2.2.0",
-    "express": "^4.14.0",
-    "pug": "^2.0.0-beta6"
+    "express": "^4.14.0"
   },
   "engines": {
     "node": "~6.10.x"
