--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "body-parser": "^1.17.2",
     "debug": "^2.2.0",
     "express": "^4.14.0",
-    "method-override": "^2.3.9"
+    "method-override": "^2.3.9",
+    "mongoose": "^4.11.7"
   },
   "engines": {
     "node": "~6.10.x"
